# learn-compilers

./: .gitignore  README.md
architecture_prototypes/: main.ml
examples-from-others/fang_1.3.0/: .gitignore  .ocamlformat  CHANGES.md  Makefile  development.org  dune-project  fang.opam  flake.nix  overview.org  publish.el  tiger.org
examples-from-others/fang_1.3.0/doc/: dune  prettify.ml
examples-from-others/fang_1.3.0/emacs/: tiger-mode.el
examples-from-others/fang_1.3.0/hook/: pre_commit
examples-from-others/fang_1.3.0/lib/: dune  fang.ml  fang.mli  index.mld
examples-from-others/fang_1.3.0/lib/alloc/: dune  fang_alloc.ml  fang_alloc.mli  interf_graph.ml  irc.ml  prelude.ml  undirected_graph.ml  undirected_graph.mli
examples-from-others/fang_1.3.0/lib/asm/: dune  fang_asm.ml  fang_asm.mli
examples-from-others/fang_1.3.0/lib/cmake/: dune  fang_cmake.ml  fang_cmake.mli
examples-from-others/fang_1.3.0/lib/flow/: block.ml  dune  fang_flow.ml  fang_flow.mli  graph.ml  node.ml
examples-from-others/fang_1.3.0/lib/frame/: dune  fang_frame.ml
examples-from-others/fang_1.3.0/lib/ir/: canonical.ml  dune  fang_ir.ml  fang_ir.mli  prelude.ml  pretty.ml  rewrite.ml
examples-from-others/fang_1.3.0/lib/iter/: dune  fang_iter.ml  fang_iter.mli
examples-from-others/fang_1.3.0/lib/monads/: dune  fang_monads.ml
examples-from-others/fang_1.3.0/lib/tiger/: dune  escaping.ml  fang_tiger.ml  fang_tiger.mli  grammar.mly  leaves.ml  lexer.mll  mutability.ml  parsing.ml  prelude.ml  pretty.ml  tokens.mly  validation.ml
examples-from-others/fang_1.3.0/lib/translate/: dune  fang_translate.ml  fang_translate.mli
examples-from-others/fang_1.3.0/lib/vm/: dune  fang_vm.ml  fang_vm.mli
examples-from-others/fang_1.3.0/lib/x64/: dune  emit.ml  fang_x64.ml  fang_x64.mli  prelude.ml
examples-from-others/fang_1.3.0/rt/: dune
examples-from-others/fang_1.3.0/rt/c/: .clang-format  CMakeLists.txt
examples-from-others/fang_1.3.0/rt/c/src/: alloc.c  error.c  io.c  main.c  string.c  types.c
examples-from-others/fang_1.3.0/test/: collect_snippets.ml  dune  test_support.ml  test_support.mli
examples-from-others/fang_1.3.0/test/alloc/: dune  test_alloc.ml
examples-from-others/fang_1.3.0/test/flow/: dune  rtl.ml  rtl.mli  test_flow.ml  test_flow_graph.ml  test_flow_liveness.ml
examples-from-others/fang_1.3.0/test/int/: dune
examples-from-others/fang_1.3.0/test/int/array_size.t/: array_size.tig  run.t
examples-from-others/fang_1.3.0/test/int/array_sum.t/: array_sum.tig  run.t
examples-from-others/fang_1.3.0/test/int/bubble_sort.t/: bubble_sort.tig  run.t
examples-from-others/fang_1.3.0/test/int/call_in_loop.t/: call_in_loop.tig  run.t
examples-from-others/fang_1.3.0/test/int/factorial.t/: factorial.tig  run.t
examples-from-others/fang_1.3.0/test/int/linked_list.t/: linked_list.tig  run.t
examples-from-others/fang_1.3.0/test/int/many_params.t/: many_params.tig  run.t
examples-from-others/fang_1.3.0/test/int/many_vars.t/: many_vars.tig  run.t
examples-from-others/fang_1.3.0/test/tiger/: dune  test_tiger.ml  test_tiger_analysis.ml  test_tiger_pretty.ml
examples-from-others/fang_1.3.0/test/translate/: dune  test_translate.ml
(+132 files in other folders)
